# open_tab_v2

./: .gitignore  Cargo.toml  DEV_README.md  generate_entities.sh  publish.py
migration/: Cargo.toml
open_tab_app/: .gitignore  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
open_tab_app/src-tauri/: Cargo.toml  tauri.conf.json
open_tab_app/src-tauri/capabilities/: desktop.json  migrated.json
open_tab_app/src-tauri/icons/: icon.icns
open_tab_app/src-tauri/resources/: default_feedback_form.yml  well_known_institutions.csv
open_tab_app/src-tauri/src/: identity.rs  main.rs  settings.rs  tournament_creation.rs
open_tab_app_backend/: Cargo.toml
open_tab_app_backend/src/: actions.rs  feedback.rs  frontend_queries.rs  institutions.rs  lib.rs  mock.rs
open_tab_app_backend/src/actions/: base.rs  create_break_category.rs  create_institution.rs  discard_ballot.rs  edit_tree.rs  execute_plan_node.rs  generate_draw.rs  import_feedback_system.rs  make_break.rs  mod.rs  redraw_round.rs  set_adjudicator_break.rs  set_break_release.rs  set_manual_break.rs  update_clashes_action.rs  update_draw.rs  update_feedback_system.rs  update_participant.rs  update_round.rs  update_scores.rs  update_teams.rs  update_tournament.rs  update_venues.rs  upload_participants_list.rs
open_tab_app_backend/src/draw/: clashes.rs  datastructures.rs  evaluation.rs  flow_optimization.rs  mod.rs  optimization.rs  preliminary.rs  tab_draw.rs
open_tab_app_backend/src/import/: csv_reader.rs  datastructures.rs  mod.rs
open_tab_app_backend/src/views/: adjudicator_break_candidates_view.rs  base.rs  break_categories_view.rs  break_relevant_tab_view.rs  breaks.rs  clashes_view.rs  draw_view.rs  feedback_forms_view.rs  feedback_progress.rs  feedback_views.rs  institutions_view.rs  mod.rs  participants_list_view.rs  pending_ballots_view.rs  progress_view.rs  round_publication_view.rs  round_results_view.rs  rounds_view.rs  tab_view.rs  tournament_status_view.rs  tournament_tree_view.rs  venue_list_view.rs
open_tab_app_backend/tests/: action_tests.rs  draw_view_tests.rs  tab_view_tests.rs
open_tab_entities/: Cargo.toml
open_tab_entities/src/: group.rs  info.rs  lib.rs  mock.rs  prelude.rs  queries.rs  tab.rs  utilities.rs
open_tab_entities/src/derived_models/: anonymity.rs  display_ballot.rs  draw_presentation.rs  feedback.rs  feedback_progress.rs  mod.rs  node.rs  participant_registration.rs
open_tab_entities/src/domain/: ballot.rs  ballot_speech_timing.rs  clash_declaration.rs  debate.rs  debate_backup_ballot.rs  entity.rs  feedback_form.rs  feedback_question.rs  feedback_response.rs  institution_declaration.rs  mod.rs  participant.rs  participant_clash.rs  round.rs  team.rs  tournament.rs  tournament_break.rs  tournament_break_category.rs  tournament_institution.rs  tournament_plan_edge.rs  tournament_plan_node.rs  tournament_venue.rs  utils.rs
open_tab_entities/src/schema/: mod.rs
open_tab_entities/src/schema/automatic/: adjudicator.rs  adjudicator_availability_override.rs  adjudicator_speech_score.rs  adjudicator_team_score.rs  asset.rs  award_series.rs  ballot.rs  ballot_adjudicator.rs  ballot_speech.rs  ballot_speech_timing.rs  ballot_team.rs  clash_declaration.rs  debate.rs  debate_backup_ballot.rs  feedback_form.rs  feedback_form_question.rs  feedback_question.rs  feedback_response.rs  feedback_response_value.rs  institution_alias.rs  institution_declaration.rs  mod.rs  participant.rs  participant_clash.rs  participant_tournament_institution.rs  prelude.rs  published_tournament.rs  speaker.rs  team.rs  tournament.rs  tournament_break.rs  tournament_break_adjudicator.rs  tournament_break_category.rs  tournament_break_child_round.rs  tournament_break_eligible_category.rs  tournament_break_source_round.rs  tournament_break_speaker.rs  tournament_break_team.rs  tournament_debate.rs  tournament_entity.rs  (+14 more)
open_tab_entities/src/schema/manual/: adjudicator_speech_score.rs  adjudicator_team_score.rs  ballot.rs  ballot_speech.rs  ballot_team.rs  missing_relations.rs  mod.rs  participant.rs
open_tab_entities/src/tab/: augmented.rs  base.rs  mod.rs
open_tab_entities/tests/: ballot_sqlite_integration.rs  break_sqlite_integration.rs  feedback_form_sqlite_integration.rs  group_integration.rs  participant_clash_sqlite_integration.rs  participant_sqlite_integration.rs  query_sqlite_integration.rs  tournament_plan_sqlite_integration.rs
open_tab_entities/tests/common/: mod.rs
open_tab_inspector/: Cargo.toml
open_tab_inspector/src/: main.rs
open_tab_reports/: Cargo.toml  template.json  test.odp
open_tab_reports/src/: lib.rs  main.rs
open_tab_reports/src/layout/: context.rs  design.rs  font.rs  graphics.rs  image.rs  layout_trait.rs  mod.rs  page.rs  text.rs
open_tab_reports/src/layout2/: grid.rs  image.rs  layout_trait.rs  mod.rs  text.rs
open_tab_reports/src/pdf/: mod.rs
open_tab_reports/src/pdf2/: mod.rs  writable.rs
open_tab_reports/src/template/: mod.rs
open_tab_reports/templates/: ballots.html
open_tab_reports/templates/open_office/: ballot.xml  ballot_styles.xml  manifest.xml  meta.xml  presentation.xml  presentation_styles.xml  settings.xml  tab.xml  tab_styles.xml
open_tab_server/: .gitignore  Cargo.toml  build.rs
open_tab_server/data/default_awards/: award_series.csv
open_tab_server/data/default_institutions/: institutions.csv
open_tab_server/src/: assets.rs  auth.rs  ballot.rs  ballots.rs  cache.rs  config.rs  db.rs  debate.rs  feedback.rs  lib.rs  main.rs  notify.rs  participants.rs  patch.rs  presentation.rs  response.rs  round.rs  state.rs  sync.rs  tab.rs  tournament.rs  user_profile.rs  users.rs
open_tab_server/src-react/ballot_submission_form/: index.html  package-lock.json  package.json
open_tab_server/src-react/ballot_submission_form/src/: App.js  index.js
open_tab_server/src/commands/: mod.rs
open_tab_server/templates/: participant_home.html.tera
open_tab_server/tests/: ballot_interaction_tests.rs  participant_integration_tests.rs  sync_tests.rs  tournament_registration_tests.rs
open_tab_server/tests/common/: mod.rs
(+231 files in other folders)
