[package]
name = "open_tab_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open_tab_entities = { path = "../open_tab_entities" }
migration = { path = "../migration" }
sea-orm = "*"
itertools = "*"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
