[package]
name = "open_tab_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open_tab_entities = { path = "../open_tab_entities" }
migration = { path = "../migration" }
sea-orm = "*"
itertools = "*"
csv = "1.1"
lazy_static = "1.4"
regex = "1"
ordered-float = "3.5.0"
faker_rand = "0.1.1"
rand = "0.8.5"
sparse_linear_assignment="0.1.5"
chrono = "*"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
