[package]
name = "open_tab_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

open_tab_app_backend = { path = "../open_tab_app_backend" }
open_tab_entities = { path = "../open_tab_entities" }
open_tab_server = { path = "../open_tab_server" }
sea-orm = { version = "1.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "*", features = ["full"] }
migration = { path = "../migration" }