[package]
name = "open_tab_reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.21"
allsorts = "0.14.1"
encoding_rs = "0.8.33"
font-kit = "0.11.0"
fontdb = "0.13"
image = "0.24.7"
itertools = "0.11.0"
miniz_oxide = "0.7.1"
pdf-writer = "0.10"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
subsetter = "0.1.1"
svg2pdf = "0.6.0"
swash = "0.1.8"
tera = "1.19.1"
typetag = "0.2.13"
usvg = "0.32.0"
anyhow = "*"
open_tab_entities = { path = "../open_tab_entities" }
lazy_static = "1.4.0"
zip = "0.6.6"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.10.1"
qrcode-generator = "4.1.9"
