[package]
name = "open_tab_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.0", features = ["headers"]}
tokio = { version = "1.28.1", features = ["full"] }
tower-http = {version = "0.4.0", features = ["trace", "cors"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tower = "0.4"
hyper = "*"
http-body = "0.4"
chrono = "*"

sea-orm = { version = "1.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ] }
serde = {version = "*", features = ["derive"]}
serde_json = "*"
base64 = "0.21.0"

open_tab_entities = { path = "../open_tab_entities" }
migration = { path = "../migration" }
password-hash = {version = "0.5.0", features = ["std"]}
argon2 = "0.5.0"
rand = "0.8.5"
tracing-test = {version = "0.2.4", features = ["no-env-filter"] }

itertools = "*"
anyhow = "*"
serde_yaml = "0.9.27"
tokio-stream = {version="0.1.14", features = ["sync"]}
weak-table = "0.3.2"
bincode = "1.3.3"
lru = "0.13.0"

[dev-dependencies]
assert_matches = "1.5.0"
