[package]
name = "open_tab_app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open_tab_entities = { path = "../../open_tab_entities" }
open_tab_app_backend = { path = "../../open_tab_app_backend" }
open_tab_server = { path = "../../open_tab_server" }
migration = { path = "../../migration" }
sea-orm = "*"
itertools = "*"
tokio="*"
reqwest = { version = "0.11", features = ["json"] }
ordered-float = "3.5.0"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
