[package]
name = "open_tab_app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open_tab_entities = { path = "../../open_tab_entities" }
open_tab_app_backend = { path = "../../open_tab_app_backend" }
open_tab_server = { path = "../../open_tab_server" }
migration = { path = "../../migration" }
sea-orm = "*"
itertools = "*"
tokio="*"
reqwest = { version = "0.11", features = ["json"] }
ordered-float = "3.5.0"
chrono = "*"
keyring = "*"
dirs = "*"
thiserror = "*"
anyhow = "*"
open_tab_reports = { path = "../../open_tab_reports" }
url = "2.5.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
